appId: com.offmind.aiflappybird
---
- launchApp
- tapOn: "Start Game"
- assertVisible: "Score"
- assertVisible: "Best"
- assertVisible: "Take Wing"
- tapOn: "Take Wing"
- runFlow:
    when:
      visible: "Try Again"
    commands:
      - assertVisible: "Try Again"
