appId: com.offmind.aiflappybird
---
- launchApp
- tapOn: "Take Wing"
- assertVisible: "Score"
- assertVisible: "Best"
